# danxe

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  aedif.c  aedif.h  meson.build
core/: CMakeLists.txt  Instruction.cc  Instruction.hh  Metadata.cc  Metadata.hh  SizeInt.cc  SizeInt.hh  Value.cc  Value.hh
src/: DanxeVm.cc  DanxeVm.hh  Instruction.cc  Instruction.hh  Value.cc  Value.hh  error.rs  inttype.hh  lib.rs  main.cc  main.rs  utils.cc  utils.hh
src/from_to/: from.rs  mod.rs  to.rs
src/vm/: Opcode.hh  Value.cc  Value.hh  metadata.rs  mod.rs  opcode.rs  value.rs
syntax/: dxa-mode.el  dxa.vim  glasm-mode.el  glasm.vim
toolchain/danxeasm/: CMakeLists.txt  Compiler.cc  Compiler.hh  Error.cc  Error.hh  FileIO.cc  FileIO.hh  Preprocessor.cc  Preprocessor.hh  main.cc
toolchain/danxevm/: CMakeLists.txt  Debugger.cc  Debugger.hh  Error.cc  Error.hh  FileIO.cc  FileIO.hh  Vm.cc  Vm.hh  main.cc
