[package]
name = "danxe"
version = "0.1.0"
edition = "2021"

[lib]
name = "danxe"
crate-type = ["lib"]

[[bin]]
name = "danxe"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
error-stack = "0.3.1"
itertools = "0.10.5"
thiserror = "1.0.40"

[dev-dependencies]
rand = "0.8.5"
